# cli-def

./: CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  pytest.ini
docs/: CNAME  index.html  spec.md
src/cli_def/: __init__.py  demo_handlers.py
src/cli_def/_internal/: __init__.py  scan_runner.py
src/cli_def/argparse/: __init__.py  argparse_builder.py
src/cli_def/backend/: __init__.py  protocols.py
src/cli_def/backend/argparse/: __init__.py  argparse_builder.py
src/cli_def/backend/click/: __init__.py  click_binder.py  click_builder.py
src/cli_def/basic/: __init__.py  basic_types.py
src/cli_def/click/: __init__.py  click_binder.py  click_builder.py
src/cli_def/core/: __init__.py
src/cli_def/core/models/: __init__.py  protocols.py
src/cli_def/core/parser/: __init__.py  parser.py
src/cli_def/demo/: __init__.py  dummy.py  dummy2.py  handlers.py
src/cli_def/models/: __init__.py  abstract_node.py  argument_def.py  cli_def.py  cli_def_node.py  command_def.py  mult_def.py
src/cli_def/ops/: __init__.py  dumper.py  loader.py
src/cli_def/parsers/: parser.py
src/cli_def/resolver/: __init__.py  resolver.py
src/cli_def/resources/: cli_def.toml
src/cli_def/runtime/: __init__.py  context.py  dispatcher.py  event.py  handler_support.py  handlers.py  result.py  runner.py  scanner.py  session.py  utils.py
src/cli_def/script/: __init__.py  common.py  handlers.py  handlers2.py  main.py
src/cli_def/test_support/: __init__.py  test_generator.py  test_runner.py
tests/cli_def/: argparse_builder_test.py  click_builder_test.py  parser_test.py
tests/cli_def/backend/: argparse_builder_test.py  click_builder_test.py
tests/cli_def/models/: mult_def_test.py
tests/cli_def/parsers/: parser_test.py
tests/data/: cli_def_command.toml  cli_def_command_w_template.toml  cli_def_hello_world.toml  cli_def_include_base.toml  cli_def_include_base_cmd.toml  cli_def_include_cmd1.toml  cli_def_include_cmd2.toml  cli_def_minimum.toml  cli_def_simple.toml  cli_def_subcommand.toml  cli_def_subcommand_w_template.toml  cli_def_validation.toml
(+58 files in other folders)
