[project]
name = "cli-def"
version = "0.2.0.dev1"
description = "A declarative DSL for composable CLI applications with runtime and REPL"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [{name="Tomesoft"}]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "wcwidth",
]

[project.urls]
Homepage = "https://cli-def.tomesoft.net"
Repository = "https://github.com/tomesoft/cli-def"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cli_def" = ["resources/*.toml", "demo/profiles/*.toml"]

[project.optional-dependencies]
click = ["click>=8.0"]
repl = ["prompt_toolkit"]
dev = ["pytest"]

[project.scripts]
cli-def = "cli_def.script.main:main"
